src/test/resources/purescript_examples/failing/TransitiveDctorExport.purs.psi
Purescript File
  PsiElement(whitespace)('-- @shouldFailWith TransitiveExportError\n')
  PSProgramImpl(Program)
    PSModuleImpl(Module)
      PsiElement(module)('module')
      PsiElement(whitespace)(' ')
      PSModuleNameImpl(ModuleName)
        PSQualifiedImpl(Qualified)
          PsiElement(proper name)('Main')
        PsiElement(whitespace)(' ')
      PsiElement(()('(')
      PSPositionedDeclarationRefImpl(PositionedDeclarationRef)
        PSProperNameImpl(ProperName)
          PsiElement(proper name)('Y')
        PsiElement(()('(')
        PsiElement(..)('..')
        PsiElement())(')')
      PsiElement())(')')
      PsiElement(whitespace)(' ')
      PsiElement(where)('where')
      PsiElement(whitespace)('\n\n')
      PSTypeSynonymDeclarationImpl(TypeSynonymDeclaration)
        PsiElement(type)('type')
        PsiElement(whitespace)(' ')
        PSTypeConstructorImpl(TypeConstructor)
          PsiElement(proper name)('X')
          PsiElement(whitespace)(' ')
        PsiElement(=)('=')
        PsiElement(whitespace)(' ')
        PSTypeImpl(Type)
          PSTypeAtomImpl(TypeAtom)
            PSTypeConstructorImpl(TypeConstructor)
              PSQualifiedImpl(Qualified)
                PSProperNameImpl(ProperName)
                  PsiElement(proper name)('Int')
                  PsiElement(whitespace)('\n')
      PSDataDeclarationImpl(DataDeclaration)
        PsiElement(data)('data')
        PsiElement(whitespace)(' ')
        PSTypeConstructorImpl(TypeConstructor)
          PSProperNameImpl(ProperName)
            PsiElement(proper name)('Y')
            PsiElement(whitespace)(' ')
        PSTypeArgsImpl(TypeArgs)
          <empty list>
        PsiElement(=)('=')
        PsiElement(whitespace)(' ')
        PSTypeConstructorImpl(TypeConstructor)
          PSProperNameImpl(ProperName)
            PsiElement(proper name)('Y')
            PsiElement(whitespace)(' ')
        PSTypeAtomImpl(TypeAtom)
          PSTypeConstructorImpl(TypeConstructor)
            PSQualifiedImpl(Qualified)
              PSProperNameImpl(ProperName)
                PsiElement(proper name)('X')
                PsiElement(whitespace)('\n')
